# pmc

./: .gitignore  CMakeLists.txt  Makefile  deps.sh  pmc.py
bindings/: pmc.py  pmc_old.py
data/: sample.mtx
src/: CMakeLists.txt  PMC.cpp  PMC.hpp  pmc_driver.cpp  pmc_heu.h  pmc_input.h  pmc_lib.cpp  pmc_maxclique.h  pmcx_maxclique.h  pmcx_maxclique_basic.h
src/py/: pmc_py.cpp
test/: CMakeLists.txt
